Use IntermediateImage for preview